Revert "Merge branch 'main' into CY_Kafka_Spring"
This reverts commit 9bfd8d9461de3d2e74e1b83b5fbf2e43c463ccf8, reversing
changes made to d899749712ced811e21659d6674a887cde358760.