@@ -68,19 +68,6 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.18.3</version>
         </dependency>
-        <dependency>
-            <groupId>com.github.dapm-thesis</groupId>
-            <artifactId>annotation-processor</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.reflections</groupId>
-            <artifactId>reflections</artifactId>
-            <version>0.10.2</version>
-        </dependency>
-
-
     </dependencies>
 
     <!-- Test profile for setting flags, active for now -->
@@ -117,17 +104,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.14.0</version>
                 <configuration>
-                    <release>21</release>
+                    <source>21</source>
+                    <target>21</target>
                     <debug>false</debug>
-
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>com.github.dapm-thesis</groupId>
-                            <artifactId>annotation-processor</artifactId>
-                            <version>1.0-SNAPSHOT</version>
-                        </path>
-                    </annotationProcessorPaths>
-
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
